--- a/app/views/manifestations/_google_book_thumbnail.html.erb
+++ b/app/views/manifestations/_google_book_thumbnail.html.erb
@@ -3,6 +3,9 @@
 <script>
   function addTheCover(booksInfo){
     var link = '<%= image_tag("unknown_resource.png", :size => "150x150", :alt => "*") %>';
+    <% unless configatron.manifestation_book_jacket.unknown_resource.blank? %>
+      link = '<%= configatron.manifestation_book_jacket.unknown_resource %>'
+    <% end %>
     for (var i in booksInfo) {
       var book = booksInfo[i];
       if (book.thumbnail_url != undefined)  {
