use encrypted.google.com

--- a/app/views/manifestations/_google_book_thumbnail.html.erb
+++ b/app/views/manifestations/_google_book_thumbnail.html.erb
@@ -1,5 +1,5 @@
 <% if manifestation.isbn? %>
-  <div id="gbsthumbnail" style="width: 160px; height: 250px"></div>
+  <div id="gbsthumbnail" class="book_jacket"></div>
 
   <script type="text/javascript">
     function addTheCover(booksInfo){
