fixed displaying custom book jackets

--- a/app/views/manifestations/_google_book_thumbnail_header.html.erb
+++ b/app/views/manifestations/_google_book_thumbnail_header.html.erb
@@ -27,10 +27,14 @@
         <% if Setting.book_jacket.unknown_resource.blank? %>
           var link = '<%= image_tag("unknown_resource.png", :size => "150x150", :alt => "*") %>';
         <% else %>
-          var link = '<%= Setting.book_jacket.unknown_resource %>'
+          var link = '<%= Setting.book_jacket.unknown_resource %>';
         <% end %>
       }
-      document.getElementById('gbsthumbnail').innerHTML = link;
+
+      var thumb_element = document.getElementById('gbsthumbnail');
+      if (thumb_element) {
+        thumb_element.innerHTML = link;
+      }
     });
   }
 </script>
